# ROSlabs

lab1/ex01/: commands.txt
lab2/: ex06  ex07
lab2/ex01/: .bashrc
lab2/ex03/: package.xml
lab2/ex04/: colcon_build.txt
lab2/ex05/: rosnode_info.txt  rosnode_list.txt
lab2/ex06/: cmd_vel.txt
lab2/ex08/: rqt_console.txt  three_turtles.launch
lab2/ex09/mes_pack/: CMakeLists.txt  package.xml
lab2/ex10/: package.xml  setup.py
lab2/ex10/text_to_cmd_vel/: pmove.py  smove.py
lab2/ex_03/: setup.cfg  setup.py
lab3/ex01/name_service/: CMakeLists.txt  package.xml
lab3/ex01/service_full_name/: package.xml  setup.py
lab3/ex01/service_full_name/service_full_name/: client_name.py  service_name.py
lab3/ex02/action_turtle_commands/: CMakeLists.txt  package.xml
lab3/ex02/action_turtle_commands/action/: ExecuteTurtleCommands.action
lab3/ex02/action_turtle_commands/src/: action_turtle_client.cpp  action_turtle_server.cpp
lab3/ex03/: pose_speed_x1.yaml  pose_speed_x2.yaml
lab3/ex03/turtle_cmd_vel.mcap/: metadata.yaml  turtle_cmd_vel.mcap_0.db3
lab3/ex04/: doctor.txt
lab3/ex05/move_to_goal/: CMakeLists.txt  package.xml
lab3/ex05/move_to_goal/src/: move_to.cpp
lab4/ex01/: last_transform.txt  transform.txt
lab4/ex02/tf2_turtlesim_carrots/: CMakeLists.txt  package.xml
lab4/ex02/tf2_turtlesim_carrots/launch/: tf2_carrots_launch.py
lab4/ex02/tf2_turtlesim_carrots/src/: carrot_frame.cpp  turtle_broadcaster.cpp  turtle_listener.cpp
lab4/ex03/tf2_turtle_back_in_future/: CMakeLists.txt  package.xml
lab4/ex03/tf2_turtle_back_in_future/launch/: tf2_back.launch.py
lab4/ex03/tf2_turtle_back_in_future/src/: turtle_listener.cpp
lab6/ex01/bot_app/: CMakeLists.txt  package.xml
lab6/ex01/bot_bringup/: CMakeLists.txt  package.xml
lab6/ex01/bot_bringup/config/: def.rviz  diff_drive.rviz
lab6/ex01/bot_bringup/launch/: bot.launch.py
lab6/ex01/bot_description/: CMakeLists.txt  package.xml
lab6/ex01/bot_description/urdf/: gen_model.bash  robot.urdf.sdf  robot.urdf.xacro
lab6/ex01/bot_description/worlds/: world.sdf
